--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "db": "json-server --watch DB/db.json --port 3000"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "json-server": "1.0.0-beta.3",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17"
   },
