--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
   "dependencies": {
     "@hugeicons/core-free-icons": "^1.0.14",
     "@hugeicons/vue": "^1.0.3",
+    "@primeuix/themes": "^1.2.1",
+    "@primevue/core": "^4.3.6",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
     "json-server": "1.0.0-beta.3",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.6",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
